# Lepton-GetThermal

./: .gitmodules  CLAUDE.md  README.md  index.html  package-lock.json  package.json
docs/superpowers/plans/: 2026-03-22-macos-camera-migration.md  2026-03-22-thermal-v2.md  2026-03-22-y16-iokit-streaming.md
docs/superpowers/specs/: 2026-03-22-y16-iokit-streaming-design.md
scripts/: export_thermal_sr.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: avfoundation.rs  lib.rs  main.rs  usb_control.rs  usb_helper.c  usb_stream.rs  uvc_descriptors.rs  uvc_ffi.rs  uvc_payload.rs
src-tauri/src/camera/: acquisition.rs  lepton.rs  mod.rs  types.rs
src-tauri/src/commands/: controls.rs  mod.rs  stream.rs
src-tauri/src/processing/: autogain.rs  colorize.rs  mod.rs  palettes.rs  upscale.rs
src/components/: AgcControls.tsx  ControlPanel.tsx  DeviceInfo.tsx  MarkersOverlay.tsx  PaletteBar.tsx  SpotmeterOverlay.tsx  TemperatureDisplay.tsx  VideoCanvas.tsx  VideoControls.tsx
src/hooks/: useCamera.ts  useFrameStream.ts
src/lib/: types.ts
