[package]
name = "thermal-v2"
version = "0.1.0"
description = "FLIR Lepton Thermal Camera Viewer"
authors = ["hmenzagh"]
edition = "2021"

[lib]
name = "thermal_v2_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
parking_lot = "0.12"
thiserror = "2"
nusb = "0.2"
futures-lite = "2"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSError", "NSNotification", "NSDictionary", "NSValue", "NSEnumerator"] }
objc2-av-foundation = { version = "0.3", features = ["AVCaptureDevice", "AVCaptureSession", "AVCaptureInput", "AVCaptureOutput", "AVCaptureOutputBase", "AVCaptureVideoDataOutput", "AVCaptureSessionPreset", "AVMediaFormat", "dispatch2"] }
objc2-core-media = { version = "0.3", features = ["CMSampleBuffer", "CMFormatDescription", "CMTime", "objc2-core-video"] }
objc2-core-video = { version = "0.3", features = ["CVPixelBuffer", "CVBuffer", "CVImageBuffer", "CVBase", "CVReturn"] }
block2 = "0.6"
dispatch2 = "0.3"
