[package]
name = "lepton-getthermal"
version = "0.1.0"
description = "Lepton-GetThermal — FLIR Lepton Thermal Camera Viewer"
authors = ["hmenzagh"]
edition = "2021"

[lib]
name = "lepton_getthermal_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
parking_lot = "0.12"
thiserror = "2"
libc = "0.2"
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
ndarray = "0.17"
